src/antlr_generated/BaseModelicaParser.py
# Generated from /home/jadonclugston/Documents/Work/dev/Modelica/BaseModelica.jl/grammar/BaseModelica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BaseModelicaParser ( Parser ):

    grammarFileName = "BaseModelica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "';'", "'model'", "'end'", 
                     "'type'", "'operator'", "'record'", "'pure'", "'constant'", 
                     "'impure'", "'function'", "'='", "'enumeration'", "'('", 
                     "':'", "')'", "'der'", "','", "'input'", "'output'", 
                     "'equation'", "'initial'", "'algorithm'", "'external'", 
                     "'parameter'", "'guess'", "'partition'", "'subpartition'", 
                     "'Clock'", "'discrete'", "':='", "'break'", "'return'", 
                     "'if'", "'then'", "'elseif'", "'else'", "'for'", "'loop'", 
                     "'in'", "'while'", "'when'", "'elsewhen'", "'prioritize'", 
                     "'@'", "'or'", "'and'", "'not'", "'<'", "'<='", "'>'", 
                     "'>='", "'=='", "'<>'", "'+'", "'-'", "'.+'", "'.-'", 
                     "'*'", "'/'", "'.*'", "'./'", "'^'", "'.^'", "'false'", 
                     "'true'", "'['", "']'", "'{'", "'}'", "'.'", "'annotation'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VERSION_HEADER", "IDENT", "UNSIGNED_NUMBER", 
                      "UNSIGNED_INTEGER", "STRING", "WS", "LINE_COMMENT", 
                      "ML_COMMENT" ]

    RULE_baseModelica = 0
    RULE_versionHeader = 1
    RULE_classDefinition = 2
    RULE_classPrefixes = 3
    RULE_classSpecifier = 4
    RULE_longClassSpecifier = 5
    RULE_shortClassSpecifier = 6
    RULE_derClassSpecifier = 7
    RULE_basePrefix = 8
    RULE_enumList = 9
    RULE_enumerationLiteral = 10
    RULE_composition = 11
    RULE_languageSpecification = 12
    RULE_externalFunctionCall = 13
    RULE_genericElement = 14
    RULE_normalElement = 15
    RULE_parameterEquation = 16
    RULE_guessValue = 17
    RULE_basePartition = 18
    RULE_subPartition = 19
    RULE_clockClause = 20
    RULE_componentClause = 21
    RULE_globalConstant = 22
    RULE_typePrefix = 23
    RULE_componentList = 24
    RULE_componentDeclaration = 25
    RULE_declaration = 26
    RULE_modification = 27
    RULE_classModification = 28
    RULE_argumentList = 29
    RULE_argument = 30
    RULE_elementModificationOrReplaceable = 31
    RULE_elementModification = 32
    RULE_equation = 33
    RULE_initialEquation = 34
    RULE_statement = 35
    RULE_ifEquation = 36
    RULE_ifStatement = 37
    RULE_forEquation = 38
    RULE_forStatement = 39
    RULE_forIndex = 40
    RULE_whileStatement = 41
    RULE_whenEquation = 42
    RULE_whenStatement = 43
    RULE_prioritizeEquation = 44
    RULE_prioritizeExpression = 45
    RULE_priority = 46
    RULE_decoration = 47
    RULE_expression = 48
    RULE_expressionNoDecoration = 49
    RULE_ifExpression = 50
    RULE_simpleExpression = 51
    RULE_logicalExpression = 52
    RULE_logicalTerm = 53
    RULE_logicalFactor = 54
    RULE_relation = 55
    RULE_relationalOperator = 56
    RULE_arithmeticExpression = 57
    RULE_addOperator = 58
    RULE_term = 59
    RULE_mulOperator = 60
    RULE_factor = 61
    RULE_primary = 62
    RULE_typeSpecifier = 63
    RULE_name = 64
    RULE_componentReference = 65
    RULE_functionCallArgs = 66
    RULE_functionArguments = 67
    RULE_functionArgumentsNonFirst = 68
    RULE_arrayArguments = 69
    RULE_namedArguments = 70
    RULE_namedArgument = 71
    RULE_functionArgument = 72
    RULE_functionPartialApplication = 73
    RULE_outputExpressionList = 74
    RULE_expressionList = 75
    RULE_arraySubscripts = 76
    RULE_subscript = 77
    RULE_comment = 78
    RULE_stringComment = 79
    RULE_annotationComment = 80

    ruleNames =  [ "baseModelica", "versionHeader", "classDefinition", "classPrefixes", 
                   "classSpecifier", "longClassSpecifier", "shortClassSpecifier", 
                   "derClassSpecifier", "basePrefix", "enumList", "enumerationLiteral", 
                   "composition", "languageSpecification", "externalFunctionCall", 
                   "genericElement", "normalElement", "parameterEquation", 
                   "guessValue", "basePartition", "subPartition", "clockClause", 
                   "componentClause", "globalConstant", "typePrefix", "componentList", 
                   "componentDeclaration", "declaration", "modification", 
                   "classModification", "argumentList", "argument", "elementModificationOrReplaceable", 
                   "elementModification", "equation", "initialEquation", 
                   "statement", "ifEquation", "ifStatement", "forEquation", 
                   "forStatement", "forIndex", "whileStatement", "whenEquation", 
                   "whenStatement", "prioritizeEquation", "prioritizeExpression", 
                   "priority", "decoration", "expression", "expressionNoDecoration", 
                   "ifExpression", "simpleExpression", "logicalExpression", 
                   "logicalTerm", "logicalFactor", "relation", "relationalOperator", 
                   "arithmeticExpression", "addOperator", "term", "mulOperator", 
                   "factor", "primary", "typeSpecifier", "name", "componentReference", 
                   "functionCallArgs", "functionArguments", "functionArgumentsNonFirst", 
                   "arrayArguments", "namedArguments", "namedArgument", 
                   "functionArgument", "functionPartialApplication", "outputExpressionList", 
                   "expressionList", "arraySubscripts", "subscript", "comment", 
                   "stringComment", "annotationComment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    VERSION_HEADER=73
    IDENT=74
    UNSIGNED_NUMBER=75
    UNSIGNED_INTEGER=76
    STRING=77
    WS=78
    LINE_COMMENT=79
    ML_COMMENT=80

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BaseModelicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def versionHeader(self):
            return self.getTypedRuleContext(BaseModelicaParser.VersionHeaderContext,0)


        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(BaseModelicaParser.IDENT)
            else:
                return self.getToken(BaseModelicaParser.IDENT, i)

        def longClassSpecifier(self):
            return self.getTypedRuleContext(BaseModelicaParser.LongClassSpecifierContext,0)


        def classDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaseModelicaParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(BaseModelicaParser.ClassDefinitionContext,i)


        def globalConstant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaseModelicaParser.GlobalConstantContext)
            else:
                return self.getTypedRuleContext(BaseModelicaParser.GlobalConstantContext,i)


        def decoration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BaseModelicaParser.DecorationContext)
            else:
                return self.getTypedRuleContext(BaseModelicaParser.DecorationContext,i)


        def annotationComment(self):
            return self.getTypedRuleContext(BaseModelicaParser.AnnotationCommentContext,0)


        def getRuleIndex(self):
            return BaseModelicaParser.RULE_baseModelica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseModelica" ):
                listener.enterBaseModelica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseModelica" ):
                listener.exitBaseModelica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseModelica" ):
                return visitor.visitBaseModelica(self)
            else:
                return visitor.visitChildren(self)




    def baseModelica(self):

        localctx = BaseModelicaParser.BaseModelicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_baseModelica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.versionHeader()
            self.state = 163
            self.match(BaseModelicaParser.T__0)
            self.state = 164
            self.match(BaseModelicaParser.IDENT)
            self.state = 179
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 177
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 166
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==45:
                            self.state = 165
                            self.decoration()


                        self.state = 168
                        self.classDefinition()
                        self.state = 169
                        self.match(BaseModelicaParser.T__1)
                        pass

                    elif la_ == 2:
                        self.state = 172
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==45:
                            self.state = 171
                            self.decoration()


                        self.state = 174
                        self.globalConstant()
                        self.state = 175
                        self.match(BaseModelicaParser.T__1)
                        pass

             
                self.state = 181
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 182
                self.decoration()


            self.state = 185
            self.match(BaseModelicaParser.T__2)
            self.state = 186
            self.longClassSpecifier()
            self.state = 187
            self.match(BaseModelicaParser.T__1)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==72:
                self.state = 188
                self.annotationComment()
                self.state = 189
                self.match(BaseModelicaParser.T__1)


            self.state = 193
            self.match(BaseModelicaParser.T__3)
            self.state = 194
            self.match(BaseModelicaParser.IDENT)
            self.state = 195
            self.match(BaseModelicaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION_HEADER(self):
            return self.getToken(BaseModelicaParser.VERSION_HEADER, 0)

        def getRuleIndex(self):
            return BaseModelicaParser.RULE_versionHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersionHeader" ):
                listener.enterVersionHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersionHeader" ):
                listener.exitVersionHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersionHeader" ):
                return visitor.visitVersionHeader(self)
            else:
                return visitor.visitChildren(self)




    def versionHeader(self):

        localctx = BaseModelicaParser.VersionHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_versionHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(BaseModelicaParser.VERSION_HEADER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classPrefixes(self):
            return self.getTypedRuleContext(BaseModelicaParser.ClassPrefixesContext,0)


        def classSpecifier(self):
            return self.getTypedRuleContext(BaseModelicaParser.ClassSpecifierContext,0)


        def getRuleIndex(self):
            return BaseModelicaParser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDefinition" ):
                return visitor.visitClassDefinition(self)
            else:
                return visitor.visitChildren(self)




    def classDefinition(self):

        localctx = BaseModelicaParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.classPrefixes()
            self.state = 200
            self.classSpecifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassPrefixesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BaseModelicaParser.RULE_classPrefixes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassPrefixes" ):
                listener.enterClassPrefixes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassPrefixes" ):
                listener.exitClassPrefixes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassPrefixes" ):
                return visitor.visitClassPrefixes(self)
            else:
                return visitor.visitChildren(self)




    def classPrefixes(self):

        localctx = BaseModelicaParser.ClassPrefixesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classPrefixes)
        self._la = 0 # Token type
        try:
            self.state = 218
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.match(BaseModelicaParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 203
                    self.match(BaseModelicaParser.T__5)


                self.state = 206
                self.match(BaseModelicaParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 212
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 207
                    self.match(BaseModelicaParser.T__7)
                    self.state = 209
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==9:
                        self.state = 208
                        self.match(BaseModelicaParser.T__8)


                    pass
                elif token in [10]:
                    self.state = 211
                    self.match(BaseModelicaParser.T__9)
                    pass
                elif token in [6, 11]:
                    pass
                else:
                    pass
                self.state = 215
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 214
                    self.match(BaseModelicaParser.T__5)


                self.state = 217
                self.match(BaseModelicaParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def longClassSpecifier(self):
            return self.getTypedRuleContext(BaseModelicaParser.LongClassSpecifierContext,0)


        def shortClassSpecifier(self):
            return self.getTypedRuleContext(BaseModelicaParser.ShortClassSpecifierContext,0)


        def derClassSpecifier(self):
            return self.getTypedRuleContext(BaseModelicaParser.DerClassSpecifierContext,0)


        def getRuleIndex(self):
            return BaseModelicaParser.RULE_classSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassSpecifier" ):
                listener.enterClassSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassSpecifier" ):
                listener.exitClassSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassSpecifier" ):
                return visitor.visitClassSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def classSpecifier(self):

        localctx = BaseModelicaParser.ClassSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classSpecifier)
        try:
            self.state = 223
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 220
                self.longClassSpecifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 221
                self.shortClassSpecifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 222
                self.derClassSpecifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LongClassSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(BaseModelicaParser.IDENT)
            else:
                return self.getToken(BaseModelicaParser.IDENT, i)

        def stringComment(self):
            return self.getTypedRuleContext(BaseModelicaParser.StringCommentContext,0)


        def composition(self):
            return self.getTypedRuleContext(BaseModelicaParser.CompositionContext,0)


        def getRuleIndex(self):
            return BaseModelicaParser.RULE_longClassSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLongClassSpecifier" ):
                listener.enterLongClassSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLongClassSpecifier" ):
                listener.exitLongClassSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLongClassSpecifier" ):
                return visitor.visitLongClassSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def longClassSpecifier(self):

        localctx = BaseModelicaParser.LongClassSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_longClassSpecifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 225
            self.match(BaseModelicaParser.IDENT)
            self.state = 226
            self.stringComment()
            self.state = 227
            self.composition()
            self.state = 228
            self.match(BaseModelicaParser.T__3)
            self.state = 229
            self.match(BaseModelicaParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortClassSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(BaseModelicaParser.IDENT, 0)

        def comment(self):
            return self.getTypedRuleContext(BaseModelicaParser.CommentContext,0)


        def typeSpecifier(self):
            return self.getTypedRuleContext(BaseModelicaParser.TypeSpecifierContext,0)


        def basePrefix(self):
            return self.getTypedRuleContext(BaseModelicaParser.BasePrefixContext,0)


        def classModification(self):
            return self.getTypedRuleContext(BaseModelicaParser.ClassModificationContext,0)


        def enumList(self):
            return self.getTypedRuleContext(BaseModelicaParser.EnumListContext,0)


        def getRuleIndex(self):
            return BaseModelicaParser.RULE_shortClassSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShortClassSpecifier" ):
                listener.enterShortClassSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShortClassSpecifier" ):
                listener.exitShortClassSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortClassSpecifier" ):
                return visitor.visitShortClassSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def shortClassSpecifier(self):
